...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/main_button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toBottomOf="@+id/center_image"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/button"/>

    <Button
        android:id="@+id/main_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintTop_toBottomOf="@+id/main_button_login"
        app:layout_constraintLeft_toLeftOf="parent"
...
