...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_hello_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hello_text"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
...
                android:layout_height="50dp"
                app:cardCornerRadius="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/home_user_connected_profile_picture"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/profile_pictur"
                    android:src="@drawable/placeholder"
                    android:scaleType="centerCrop"
                    android:background="@drawable/circle_shape" />
...
