<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Accueil"
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"/>
    <item android:title="Mes Cours"
        android:id="@+id/myCourses"
        android:icon="@drawable/baseline_menu_book_24"/>
    <item android:title="Messages"
        android:id="@+id/messages"
        android:icon="@drawable/baseline_message_24"/>
</menu>